--- a/countryApi.html
+++ b/countryApi.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="countryDetail">
+
+    </div>
     <div id="countries">
 
     </div>
